Https connection now works. Added Settings to select SSL. * Also setup functionality to hide Developer Settings in preference activity when DEBUG is set to false

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,4 +238,8 @@
     <string name="before_after">Before/After</string>
     <string name="date">Date</string>
     <string name="share_this">Share</string>
+    <string name="pref_title_use_ssl">Use SSL</string>
+    <string name="diabetes_preference_screen">diabetesPreferenceScreen</string>
+    <string name="dev_preferences">devPreferences</string>
+    <string name="glucose_label">Glucose Level</string>
 </resources>
