Redesigned layouts of "Log" Activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -242,4 +242,5 @@
     <string name="diabetes_preference_screen">diabetesPreferenceScreen</string>
     <string name="dev_preferences">devPreferences</string>
     <string name="glucose_label">Glucose Level</string>
+    <string name="your_profile">Your Profile</string>
 </resources>
